tests/golden/diagnostics/borrow.txt
error[NQ-BORROW-001]: use of moved value `user`
  --> diag_borrow.nq:12:10
   |     take(user);
   |          ^^^^
